--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ body{
     margin-bottom: 10px;
 }
 .container{
-    box-shadow: 5px 10px 25px white; 
+    box-shadow: 5px 5px 5px white; 
     background-size: cover;
 }
 .header{
     color: white; 
-    height: 300px;
-    background-image: url("hódoltság.jpg")
+    height: 350px;
+    background-image: url("hódoltság.jpg");
     background-size: cover;
     font-size: 70px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
