--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 .container{
     background-repeat: no-repeat;
     background-size: auto;
-    box-shadow: 5px 10px black;
+    /*box-shadow: 5px 10px black;*/
 }
 .header{
     color: white; 
