--- a/style.css
+++ b/style.css
@@ -30,3 +30,10 @@ body{
     text-shadow: 5px 5px 10px black;
     border-radius: 8px;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
