--- a/style.css
+++ b/style.css
@@ -30,10 +30,14 @@ body{
     text-shadow: 5px 5px 10px black;
     border-radius: 8px;
 }
-
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  }
+}
+.szoveg{
+    background-color: rgb(255, 255, 255, 0.7);
+    border-radius: 8px;
+    float: auto;
+}
