--- a/style.css
+++ b/style.css
@@ -6,16 +6,20 @@ body{
 .kiskepek{
     width: 100%;
     margin: auto;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px black;
+    box-shadow: 5px 5px 8px black;
     margin-top: 10px;
     margin-bottom: 10px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 .container{
     background-repeat: no-repeat;
     background-size: auto;
     /*box-shadow: 5px 10px black;*/
     background-color: rgba(0, 0, 0, 0.5);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+
 }
 .header{
     color: white; 
@@ -38,8 +42,9 @@ body{
 }
 .szoveg{
     background-color: rgb(255, 255, 255, 0.7);
-    border-radius: 8px;
     float: auto;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 footer{
     text-align: center;
@@ -57,7 +62,8 @@ footer{
     padding-right: 50px;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-radius: 12px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .fej1{
     color: white; 
@@ -70,7 +76,8 @@ footer{
     padding-right: 50px;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-radius: 12px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .fej2{
     color: white; 
@@ -83,20 +90,29 @@ footer{
     padding-right: 50px;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-radius: 12px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .fej3{
     color: white; 
     height: 500px;
     background-image: url("luxi_harcok.jpg");
+    box-shadow: 5px 5px 8px black;
     background-size: cover;
     font-size: 100px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: left;
-    padding-right: 50px;
+    padding-right: auto;
+    margin: auto;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-radius: 12px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;;
+}
+.mainsz{
+    text-align: left;
+    margin: 15px;
+    padding: auto;
 }
 p{
     text-align: center;
@@ -106,24 +122,30 @@ p{
     text-align: left;
     margin: auto;
 }
-table, th, td {
+table, th, td 
+{
+    margin: auto;
+    padding: auto;
     border: 2px solid white;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.35) ;
+    border-bottom: 2px solid white; 
+    overflow: hidden;
 }
 .cim1{
     color: white;
     text-align: center;
 }
-.keret{
-    margin-left: auto;
-    margin-right: auto;
-}
 .button {
     border: black;
     background-color: white; color: black;
+    box-shadow: 4px 4px 10px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: black;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 20px;
 }
