--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body{
     /*box-shadow: 5px 10px black;*/
     background-color: rgba(0, 0, 0, 0.45);
     border-bottom-left-radius: 15px;
-
 }
 .header{
     color: white; 
@@ -31,7 +30,8 @@ body{
     padding-right: 50px;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-radius: 8px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .center {
     display: block;
@@ -58,11 +58,10 @@ footer{
     font-size: 70px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: left;
+    padding-left: 50px;
     padding-right: 50px;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
 }
 .fej1{
     color: white; 
@@ -75,8 +74,6 @@ footer{
     padding-right: 50px;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
 }
 .fej2{
     color: white; 
@@ -89,8 +86,6 @@ footer{
     padding-right: 50px;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
 }
 .fej3{
     color: white; 
@@ -105,8 +100,6 @@ footer{
     margin: auto;
     padding-top: 100px;
     text-shadow: 5px 5px 10px black;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
 }
 .mainsz{
     text-align: left;
@@ -119,30 +112,32 @@ p{
 .szoveg1{
     color: white;
     text-align: left;
-    margin: auto;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 table{
     margin: auto;
     padding: auto;
     background-color: rgba(0, 0, 0, 0.35);
-    border-style: inset;
-    border-color: white;
+    overflow: hidden;
 }
 th, td {
-    border: 1.5px solid white;
-    border-radius: 10px;
+    overflow: hidden;
 }
 .cim1{
     color: white;
     text-align: center;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-color: white;
 }
-footer {
+.mellek {
     position: fixed;
     left: 0;
     bottom: 0;
     height: 5%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.35);;
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     text-align: center;
     border-top-left-radius: 15px;
@@ -151,7 +146,7 @@ footer {
 }
 .button {
     border: black;
-    background-color: white; color: black;
+    background-color: rgb(255, 255, 255);; color: black;
     box-shadow: 4px 4px 10px;
     text-align: center;
     text-decoration: black;
@@ -161,4 +156,22 @@ footer {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     float: right;
+}
+.alap{
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.button1 {
+    border: black;
+    background-color: rgba(255, 255, 255, 1);; color: black;
+    box-shadow: 4px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: -15px -12px;
+    cursor: pointer;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    float: right;
+    overflow: auto;
 }
