--- a/style.css
+++ b/style.css
@@ -125,11 +125,12 @@ p{
     text-align: left;
     margin-left: 15px;
     margin-right: 15px;
+    font-size: 20px;
 }
 table{
     margin: auto;
     padding: auto;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: rgba(0, 0, 0, 0.55);
     overflow: hidden;
 }
 th, td {
@@ -193,6 +194,7 @@ th, td {
     border-bottom-right-radius: 15px;
     float: right;
     overflow: auto;
+    padding-bottom: 50px;
 }
 .button1:hover{
     left: 50%;
@@ -202,6 +204,4 @@ th, td {
     transition: .5s ease-out;
     box-shadow: 10px 10px 10px black;
 }
-.face{
-    
-}
+/*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal*/
