--- a/style.css
+++ b/style.css
@@ -159,39 +159,28 @@ th, td {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 
-    /*position: relative;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    height: 5%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    text-align: center;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;*/
 }
 .button {
+    position: relative;
     border: black;
     background-color: rgb(255, 255, 255);; color: black;
-    box-shadow: 4px 4px 10px;
+    box-shadow: 0px -2px 10px;
     text-align: center;
     text-decoration: black;
     font-size: 16px;
-    margin: 0px -12px;
+    margin: 0px 13px;
     cursor: pointer;
     border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
     float: right;
 }
 .button:hover{
-    left: 50%;
+    position: relative;
+    /*left: 50%;
     margin-left: -240px;
-    font-size: 22px;
+    font-size: 22px;*/
     transition: .5s ease-in;
     transition: .5s ease-out;
-    box-shadow: 10px 10px 10px black;
+    box-shadow: -10px 10px 10px black;
 }
 .alap{
     border-bottom-left-radius: 15px;
@@ -211,6 +200,19 @@ th, td {
     float: right;
     overflow: auto;
 }
+.button2 {
+    position: relative;
+    border: black;
+    background-color: rgb(255, 255, 255);; color: black;
+    box-shadow: 4px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: 0px -12px;
+    cursor: pointer;
+    border-bottom-right-radius: 15px;
+    float: right;
+}
 .button1:hover{
     left: 50%;
     margin-left: -240px;
@@ -219,4 +221,72 @@ th, td {
     transition: .5s ease-out;
     box-shadow: 10px 10px 10px black;
 }
+.button2:hover{
+    position: relative;
+    /*left: 50%;
+    margin-left: -240px;
+    font-size: 22px;*/
+    transition: .5s ease-in;
+    transition: .5s ease-out;
+    box-shadow: 10px 10px 10px black;
+}
+.button3 {
+    position: relative;
+    border: black;
+    background-color: rgb(255, 255, 255);; color: black;
+    box-shadow: 4px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: 0px -12px;
+    cursor: pointer;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    float: right;
+}
+.button3:hover{
+    position: relative;
+    /*left: 50%;
+    margin-left: -240px;
+    font-size: 22px;*/
+    transition: .5s ease-in;
+    transition: .5s ease-out;
+    box-shadow: 10px 10px 10px black;
+}
 /*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal*/
+/*.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+*/
