--- a/style.css
+++ b/style.css
@@ -182,12 +182,9 @@ th, td {
 }
 .button:hover{
     position: relative;
-    /*left: 50%;
-    margin-left: -240px;
-    font-size: 22px;*/
     transition: .5s ease-in;
     transition: .5s ease-out;
-    box-shadow: -10px 10px 10px black;
+    box-shadow: -8px 88px 10px black;
 }
 .alap{
     border-bottom-left-radius: 15px;
@@ -202,10 +199,9 @@ th, td {
     font-size: 16px;
     margin: -15px -12px;
     cursor: pointer;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
     float: right;
-    overflow: auto;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 .button2 {
     position: relative;
@@ -221,18 +217,13 @@ th, td {
     float: right;
 }
 .button1:hover{
-    left: 50%;
-    margin-left: -240px;
-    font-size: 22px;
+    position: relative;
     transition: .5s ease-in;
     transition: .5s ease-out;
-    box-shadow: 10px 10px 10px black;
+    box-shadow: 0px 10px 10px black;
 }
 .button2:hover{
     position: relative;
-    /*left: 50%;
-    margin-left: -240px;
-    font-size: 22px;*/
     transition: .5s ease-in;
     transition: .5s ease-out;
     box-shadow: 10px 10px 10px black;
@@ -253,24 +244,70 @@ th, td {
 }
 .button3:hover{
     position: relative;
-    /*left: 50%;
-    margin-left: -240px;
-    font-size: 22px;*/
     transition: .5s ease-in;
     transition: .5s ease-out;
-    box-shadow: 10px 10px 10px black;
+    box-shadow: 8px 8px 10px black;
 }
-.ici{
-    width: 20%;
-    border-radius: 10px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    
+.button4{
+    border: black;
+    background-color: rgba(255, 255, 255, 1);; color: black;
+    box-shadow: 4px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: 0px 14px;
+    cursor: pointer;
+    float: right;
+}
+.button4:hover{
+    position: relative;
+    transition: .5s ease-in;
+    transition: .5s ease-out;
+    box-shadow: 0px 10px 10px black;
+}
+.button5 {
+    position: relative;
+    border: black;
+    background-color: rgb(255, 255, 255);; color: black;
+    box-shadow: 4px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: 0px -12px;
+    cursor: pointer;
+    border-bottom-right-radius: 15px;
+    float: right;
+}
+.button5:hover{
+    position: relative;
+    transition: .5s ease-in;
+    transition: .5s ease-out;
+    box-shadow: 8px 8px 10px black;
+}
+.button6 {
+    position: relative;
+    border: black;
+    background-color: rgb(255, 255, 255);; color: black;
+    box-shadow: 4px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: 0px 0px;
+    cursor: pointer;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    float: left;
+}
+.button6:hover{
+    position: relative;
+    transition: .5s ease-in;
+    transition: .5s ease-out;
+    box-shadow: 8px 8px 10px black;
+}
 
-}
 /*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal*/
-/*.modal {
+
+.modal{
     display: none; 
     position: fixed; 
     z-index: 1; 
@@ -280,29 +317,68 @@ th, td {
     width: 100%; 
     height: 100%; 
     overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-  }
-  
-  .modal-content {
+    background-color: rgb(0, 0, 0); 
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
+    padding: auto;
     border: 1px solid #888;
     width: 80%;
-  }
+}
   
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
+.close {
+    padding: auto;
+    margin-left: auto;
+    margin-right: 25px;
+    color: #000000;
+    font-size: 24px;
     font-weight: bold;
-  }
+}
   
-  .close:hover,
-  .close:focus {
-    color: #000;
+.close:hover,
+.close:focus {
+    color: rgb(255, 0, 0);
     text-decoration: none;
     cursor: pointer;
-  }
-*/
+}
+#myBtn{
+    float: right;
+    border: black;
+    background-color: rgb(255, 255, 255);; color: black;
+    box-shadow: 4px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: 0px 13px;
+    cursor: pointer;
+    border-bottom-left-radius: 15px;
+}
+#myBtn:hover{
+    position: relative;
+    transition: .5s ease-in;
+    transition: .5s ease-out;
+    box-shadow: -8px 0px 10px black;
+}
+#myBtn1{
+    float: right;
+    border: black;
+    background-color: rgb(255, 255, 255);; color: black;
+    box-shadow: 0px 4px 10px;
+    text-align: center;
+    text-decoration: black;
+    font-size: 16px;
+    margin: 0px -12px;
+    cursor: pointer;
+    border-bottom-left-radius: 15px;
+}
+#myBtn1:hover{
+    position: relative;
+    transition: .5s ease-in;
+    transition: .5s ease-out;
+    box-shadow: -8px 8px 10px black;
+}
+.forszov{
+    text-align: center;
+}
