--- a/style.css
+++ b/style.css
@@ -382,3 +382,12 @@ th, td {
 .forszov{
     text-align: center;
 }
+.ici{
+    width: 25%;
+    border-radius: 10px;
+    padding: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
